--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^6.1.9",
     "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.9",
@@ -31,6 +32,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.3.1",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
     "core-js": "2.5.7",
